vendor/linux/x64/ftd2xx.h


typedef PVOID	FT_HANDLE;
typedef ULONG	FT_STATUS;
	typedef struct ft_eeprom_header {
		FT_DEVICE deviceType;		
		WORD VendorId;				
		WORD ProductId;				
		UCHAR SerNumEnable;			
		WORD MaxPower;				
		UCHAR SelfPowered;			
		UCHAR RemoteWakeup;			
		UCHAR PullDownEnable;		
	} FT_EEPROM_HEADER, *PFT_EEPROM_HEADER;
	typedef struct ft_eeprom_x_series {
		FT_EEPROM_HEADER common;	
		UCHAR ACSlowSlew;			
		UCHAR ACSchmittInput;		
		UCHAR ACDriveCurrent;		
		UCHAR ADSlowSlew;			
		UCHAR ADSchmittInput;		
		UCHAR ADDriveCurrent;		
		UCHAR Cbus0;				
		UCHAR Cbus1;				
		UCHAR Cbus2;				
		UCHAR Cbus3;				
		UCHAR Cbus4;				
		UCHAR Cbus5;				
		UCHAR Cbus6;				
		UCHAR InvertTXD;			
		UCHAR InvertRXD;			
		UCHAR InvertRTS;			
		UCHAR InvertCTS;			
		UCHAR InvertDTR;			
		UCHAR InvertDSR;			
		UCHAR InvertDCD;			
		UCHAR InvertRI;				
		UCHAR BCDEnable;			
		UCHAR BCDForceCbusPWREN;	
		UCHAR BCDDisableSleep;		
		WORD I2CSlaveAddress;		
		DWORD I2CDeviceId;			
		UCHAR I2CDisableSchmitt;	
		UCHAR FT1248Cpol;			
		UCHAR FT1248Lsb;			
		UCHAR FT1248FlowControl;	
		UCHAR RS485EchoSuppress;	
		UCHAR PowerSaveEnable;		
		UCHAR DriverType;			
	} FT_EEPROM_X_SERIES, *PFT_EEPROM_X_SERIES;
	FTD2XX_API FT_STATUS WINAPI FT_EEPROM_Read(
		FT_HANDLE ftHandle,
		void *eepromData,
		DWORD eepromDataSize,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);
	FTD2XX_API FT_STATUS WINAPI FT_EEPROM_Program(
		FT_HANDLE ftHandle,
		void *eepromData,
		DWORD eepromDataSize,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetLatencyTimer(
		FT_HANDLE ftHandle,
		UCHAR ucLatency
		);
	FTD2XX_API FT_STATUS WINAPI FT_GetLatencyTimer(
		FT_HANDLE ftHandle,
		PUCHAR pucLatency
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetBitMode(
		FT_HANDLE ftHandle,
		UCHAR ucMask,
		UCHAR ucEnable
		);
	FTD2XX_API FT_STATUS WINAPI FT_GetBitMode(
		FT_HANDLE ftHandle,
		PUCHAR pucMode
		);